add new configs that have changed

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,317 +1,161 @@
-#################################
-#
-# Backend
-#
-#################################
+#### Experimental ####
 
-# Backend to use: "xrender" or "glx".
-# GLX backend is typically much faster but depends on a sane driver.
-backend = "glx";
-
-#################################
-#
-# GLX backend
-#
-#################################
-
-glx-no-stencil = true;
-
-# GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
-# My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
-# but a 20% increase when only 1/4 is.
-# My tests on nouveau show terrible slowdown.
-glx-copy-from-front = false;
-
-# GLX backend: Use MESA_copy_sub_buffer to do partial screen update.
-# My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
-# May break VSync and is not available on some drivers.
-# Overrides --glx-copy-from-front.
-# glx-use-copysubbuffermesa = true;
-
-# GLX backend: Avoid rebinding pixmap on window damage.
-# Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
-# Recommended if it works.
-# glx-no-rebind-pixmap = true;
-
-# GLX backend: GLX buffer swap method we assume.
-# Could be undefined (0), copy (1), exchange (2), 3-6, or buffer-age (-1).
-# undefined is the slowest and the safest, and the default value.
-# copy is fastest, but may fail on some drivers,
-# 2-6 are gradually slower but safer (6 is still faster than 0).
-# Usually, double buffer means 2, triple buffer means 3.
-# buffer-age means auto-detect using GLX_EXT_buffer_age, supported by some drivers.
-# Useless with --glx-use-copysubbuffermesa.
-# Partially breaks --resize-damage.
-# Defaults to undefined.
-#glx-swap-method = "undefined";
-
-#################################
-#
-# Shadows
-#
-#################################
-
-# Enabled client-side shadows on windows.
-shadow = true;
-# The blur radius for shadows. (set to 20 for good shadow)
-shadow-radius = 15;
-# The left offset for shadows. (set to 5)
-shadow-offset-x = 8;
-# The top offset for shadows. (set to 5)
-shadow-offset-y = 8;
-# The translucency for shadows. (set to 0.9)
-shadow-opacity = 0.65;
-
-# Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
-
-# The shadow exclude options are helpful if you have shadows enabled. Due to the way picom draws its shadows, certain applications will have visual glitches
-# (most applications are fine, only apps that do weird things with xshapes or argb are affected).
-# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
-shadow-exclude = [
-    "! name~=''",
-    "name = 'Notification'",
-    "name = 'Plank'",
-    "name = 'plank'",
-    "name = 'Docky'",
-    "name = 'Kupfer'",
-    "name = 'xfce4-notifyd'",
-    "name *= 'VLC'",
-    "name *= 'compton'",
-    "name *= 'picom'",
-    "name *= 'Chromium'",
-    "name *= 'Chrome'",
-    "class_g = 'Firefox' && argb",
-    "class_g = 'firefox'",
-    "class_g = 'tilda'",
-    "class_g = 'Brave-browser'",
-    "class_g = 'brave'",
-    "class_g = 'Tint2'",
-    "class_g = 'Pcmanfm'",
-    "class_g = 'obs'",
-    "class_g = 'Conky'",
-    "class_g = 'Polybar'",
-    "class_g = 'Kupfer'",
-    "class_g = 'Synapse'",
-    "class_g ?= 'Notify-osd'",
-    "class_g ?= 'Cairo-dock'",
-    "class_g ?= 'Xfce4-notifyd'",
-    "class_g ?= 'Xfce4-power-manager'",
-    "_GTK_FRAME_EXTENTS@:c",
-    "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+corner-radius = 10;
+round-borders = 10;
+rounded-corners-exclude = [
+   "class_g ?= 'Notify-osd'",
+   "class_g = 'dmenu'",
+   "class_g = 'Polybar'",
+   "class_g = 'Tint2'",
+   "class_g = 'Brave-browser'",
+   "class_g = 'Pcmanfm'",
+   "class_g = 'Thunar'",
+   "!window_type = 'normal'"
 ];
-# Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
 
-#################################
-#
-# Opacity
-#
-#################################
+### Shadows ###
 
-inactive-opacity = 1;
-active-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = false;
-
-opacity-rule = [
-  "100:class_g = 'URxvt'",
-  "100:class_g = 'Tilix'",
+shadow = true;
+shadow-radius = 6;
+shadow-opacity = 0.5;
+shadow-offset-x = 6;
+shadow-offset-y = 5;
+shadow-red = 0.0;
+shadow-green = 0.0;
+shadow-blue = 0.0;
+xinerama-shadow-crop = true;
+#shadow-ignore-shaped = ''
+shadow-exclude = [
+#   "name = 'Dunst'",
+   "class_g ?= 'Notify-osd'",
+   "class_g = 'spectrwm'",
+   "class_g = 'dmenu'",
+   "class_g = 'Easystroke'",
+   "class_g = 'Rofi'",
+   "class_g = 'GLava'",
+   "class_g = '_HERBST_FRAME'",
+#   "!_NET_WM_STATE@:a *= 'ABOVE'",
+#   "!focused",
+   #"_GTK_FRAME_EXTENTS@:c"
  ];
 
-#################################
-#
-# Blur
-#
-#################################
+### Transparency / Opacity ###
 
-# Dim inactive windows. (0.0 - 1.0)
-inactive-dim = 0.2;
-# Do not let dimness adjust based on window opacity.
-inactive-dim-fixed = true;
-# Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
+inactive-opacity = 1.0;
+active-opacity = 1.0;
+frame-opacity = 1.0;
+dropdown-menu-opacity = 1.0;
+popup-menu-opacity = 1.0;
+inactive-opacity-override = false;
+#inactive-dim = 0.3;
+
+opacity-rule = [
+  "100:class_g = 'spectrwm'",
+  "100:class_g = 'dmenu'",
+  "100:class_g = 'i3lock'",
+  "100:class_g = 'mpv'",
+  "100:class_g = 'FreeTube'",
+  "100:class_g = 'Zathura'",
+  "100:class_g = 'firefox'",
+  "100:class_g = 'discord'",
+  "100:class_g = 'Thunar'",
+  "100:class_g = 'feh'",
+  "50:class_g = 'GLava'",
+  "100:_GTK_FRAME_EXTENTS@:c"
+];
+
+#inactive-dim-fixed = 1.0
+
+### Background Blurring ###
+
 blur-background = false;
-# Blur background of opaque windows with transparent frames as well.
-blur-background-frame = false;
-# Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
+blur-method = "dual_kawase";
+#blur-method = "kernel";
+blur-size = 20;
+blur-deviation = 5;
+blur-background-fixed = true;
+blur-background-frame = true;
+blur-kernel = "7x7box";
+#blur-kernel = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#
 blur-background-exclude = [
-    "window_type = 'dock'",
-    "window_type = 'desktop'"
+  "class_g ~= 'slop'",
+  "class_g = 'spectrwm'",
+  "class_g = 'GLava'",
+  "_GTK_FRAME_EXTENTS@:c",
 ];
 
-blur: {
-  method = "dual_kawase";
-  strength = 0;
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-}
+# Animations
+animations = true;
+animation-stiffness = 500;
+animation-dampening = 30;
+animation-clamping = true;
+animation-mass = 1.0;
+animation-for-open-window = "zoom";
+animation-for-unmap-window = "zoom";
+animation-for-menu-window = "slide-down";
+animation-for-transient-window = "slide-down";
+#animation-for-transient-window = "slide-up";
 
-#################################
-#
-# Rounded Corners
-#
-#################################
+animation-for-workspace-switch-in = "zoom";
+animation-for-workspace-switch-out = "zoom";
 
-corner-radius = 0.0;
-rounded-corners-exclude = [
-#  "window_type = 'normal'",
-#  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'Polybar'",
-  "class_g = 'tint2'",
-  "class_g = 'Tint2'",
-  "class_g = 'Brave'",
-  "class_g = 'code-oss'",
-  "class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'",
-  "class_g = 'brave'",
-];
+### General Settings ###
 
-#################################
-#
-# Fading
-#
-#################################
-
-# Fade windows during opacity changes.
-fading = false;
-# The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 10;
-# Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.028;
-# Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
-# Fade windows in/out when opening/closing
-no-fading-openclose = true;
-
-# Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ ];
-
-#################################
-#
-# Other
-#
-#################################
-
-# Try to detect WM windows and mark them as active.
-mark-wmwin-focused = true;
-# Mark all non-WM but override-redirect windows active (e.g. menus).
-mark-ovredir-focused = true;
-# Use EWMH _NET_WM_ACTIVE_WINDOW to determine which window is focused instead of using FocusIn/Out events.
-# Usually more reliable but depends on a EWMH-compliant WM.
-use-ewmh-active-win = true;
-# Detect rounded corners and treat them as rectangular when --shadow-ignore-shaped is on.
-detect-rounded-corners = true;
-
-# Detect _NET_WM_OPACITY on client windows, useful for window managers not passing _NET_WM_OPACITY of client windows to frame windows.
-# This prevents opacity being ignored for some apps.
-# For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
-detect-client-opacity = true;
-
-# Specify refresh rate of the screen.
-# If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
-
-# Vertical synchronization: match the refresh rate of the monitor
+backend = "glx";
 vsync = true;
-
-# Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
-# Reported to have no effect, though.
-dbe = false;
-
-# Limit picom to repaint at most once every 1 / refresh_rate second to boost performance.
-# This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
-# unless you wish to specify a lower refresh rate than the actual value.
-#sw-opti = true;
-
-# Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
-# Known to cause flickering when redirecting/unredirecting windows.
+mark-wmwin-focused = false;
+detect-rounded-corners = true;
+detect-client-opacity = true;
+use-damage = true;
+refresh-rate = 0;
 unredir-if-possible = false;
+fading = true;
+fade-in-step= 0.02;
+fade-out-step= 0.02;
+fade-delta= 3;
+fade-exclude = [
+#  "class_g = 'firefox' && argb",
+#  "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+#  "x = 0 && y = 0"
+]
 
-# Specify a list of conditions of windows that should always be considered focused.
-focus-exclude = [ ];
-
-# Use WM_TRANSIENT_FOR to group windows, and consider windows in the same group focused at the same time.
-detect-transient = true;
-# Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
-# WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
-detect-client-leader = true;
-
-#################################
-#
-# Window type settings
-#
-#################################
+glx-no-stencil = false;
+glx-no-rebind-pixmap = false;
+# xrender-sync-fence = true;
 
 wintypes:
 {
-    tooltip =
-    {
-        # fade: Fade the particular type of windows.
-        fade = false;
-        # shadow: Give those windows shadow
-        shadow = true;
-        # opacity: Default opacity for the type of windows.
-        opacity = 1.0;
-        # focus: Whether to always consider windows of this type focused.
-        focus = false;
+	tooltip = {
+		fade = false;
+		shadow = false;
+		opacity = false;
+		focus = false;
+		full-shadow = false;
     };
-    menu =
-    {
-        # fade: Fade the particular type of windows.
-        fade = false;
-        # shadow: Give those windows shadow
-        shadow = true;
-        # opacity: Default opacity for the type of windows.
-        opacity = 1.0;
-        # focus: Whether to always consider windows of this type focused.
-        focus = true;
-    };
-    notify =
-    {
-        # fade: Fade the particular type of windows.
-        fade = true;
-        # shadow: Give those windows shadow
-        shadow = true;
-        # opacity: Default opacity for the type of windows.
-        opacity = 1.0;
-        # focus: Whether to always consider windows of this type focused.
-        focus = false;
-    };
-    dock =
-    {
-        # fade: Fade the particular type of windows.
-        fade = false;
-        # shadow: Give those windows shadow
-        shadow = true;
-        # opacity: Default opacity for the type of windows.
-        opacity = 1.0;
-        # focus: Whether to always consider windows of this type focused.
-        focus = true;
-    };
-    dnd =
-    {
-        # fade: Fade the particular type of windows.
-        fade = false;
-        # shadow: Give those windows shadow
-        shadow = false;
-        # opacity: Default opacity for the type of windows.
-        opacity = 1.0;
-        # focus: Whether to always consider windows of this type focused.
-        focus = true;
-    };
+  	dock = {
+		 shadow = false;
+    }
+  	dnd = {
+		shadow = false;
+    }
+  	popup_menu = {
+  		fade = false;
+		opacity = false;
+		shadow = true;
+    }
+    dropdown_menu = {
+  		fade = false;
+		opacity = false;
+		shadow = false;
+    }
+    unknown = { fade = false; }
+    utility = { fade = false; }
+    desktop = { fade = false; shadow = false; }
+    toolbar = { fade = false; }
+    menu = { fade = false; }
+    splash = { fade = false; }
+    dialog = { fade = false; }
+#	 normal = { fade = false; }
+    combo = { fade = false; }
 };
-
-######################
-#
-# XSync
-#
-######################
-
-# Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
-xrender-sync-fence = true;
