--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -20,13 +20,13 @@ input {
         plugin "curl"
 }
 
-#audio_output {
-#	type		"fifo"
-#	name		"my_fifo"
-#	path		"/tmp/mpd.fifo"
-#	format		"44100:16:2"
-#    mixer_type  "software"
-#}
+audio_output {
+	type		"fifo"
+	name		"Visualizer Feed"
+	path		"/tmp/mpd.fifo"
+	format		"44100:16:2"
+    mixer_type  "software"
+}
 
 audio_output {
 	type		"pulse"
